--- a/overmij.html
+++ b/overmij.html
@@ -10,7 +10,7 @@
         <h1>Artist statement</h1>
         <nav>
             <ul>
-                <li><a href="Schilderijen.html">My work</a></li>
+                <li><a href="index.html">My work</a></li>
             </ul>
         </nav>
     </header>
