--- a/overmij.html
+++ b/overmij.html
@@ -15,10 +15,12 @@
         </nav>
     </header>
     <section class="content">
-        <h2>Artist statement</h2>
-        <p>It's about seeing everything and seeing nothing. The lines and blobs that eat away at the empty space.</p>
-        <p>Lines are like scratches on ice, whereas blobs are like oil on water. It stays liquid until the water dries up.</p>
-        <p>My sights and experiences enveloped by a rope of paint from a painting, a painting that gets interwoven with the viewer's eyes. That's how my inner world and their experiences become one. It's not about what I do, but about what I've seen. It's the bamboo in the garden that I saw rustling in the wind when I was a child. It's about the window during wintertime, my mother could not pull me away from this window, not even to put on my slippers. I wanted to look outside. I don't make. I admire and spit out. Isn't everything in essence made up out of blobs and lines.</p>
+        <div class="text">
+            <h2>Artist statement</h2>
+            <p>It's about seeing everything and seeing nothing. The lines and blobs that eat away at the empty space.</p>
+            <p>Lines are like scratches on ice, whereas blobs are like oil on water. It stays liquid until the water dries up.</p>
+            <p>My sights and experiences enveloped by a rope of paint from a painting, a painting that gets interwoven with the viewer's eyes. That's how my inner world and their experiences become one. It's not about what I do, but about what I've seen. It's the bamboo in the garden that I saw rustling in the wind when I was a child. It's about the window during wintertime, my mother could not pull me away from this window, not even to put on my slippers. I wanted to look outside. I don't make. I admire and spit out. Isn't everything in essence made up out of blobs and lines.</p>
+        </div>
     </section>
     <footer>
         <p>Email: Groningergroninger@outlook.com</p>
