--- a/overmij.html
+++ b/overmij.html
@@ -11,7 +11,7 @@
         <h1>Artist statement</h1>
         <nav>
             <ul>
-                <li><a href="Schilderijen.html">Art</a></li>
+                <li><a href="index.html">Art</a></li>
             </ul>
         </nav>
     </header>
@@ -28,3 +28,4 @@
     </footer>
 </body>
 </html>
+
